fix darkmode scrollbar for add publication dialog

--- a/src/renderer/assets/styles/components/alert.modals.scss
+++ b/src/renderer/assets/styles/components/alert.modals.scss
@@ -1,3 +1,5 @@
+@use '../partials/mixin' as mx;
+
 .CSS_START_components_alertModals {
   display: none;
 }
@@ -24,6 +26,8 @@
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   z-index: 110;
   border: 1px solid var(--color-verylight-grey-alt);
+
+  @include mx.scrollbar_styling;
 }
 
 .AlertDialogContent:focus {
